Initializes features viewer; Must switch to linear scale on x axis

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!-- Define page title -->
 <h1>{{ title }}</h1>
 <!-- Define container -->
-<div style="width: 600px; height: 600px; outline: 2px solid orangered">
-  <ngx-structure-viewer [source]="source" [loci]="loci"></ngx-structure-viewer>
+<div style="width: 600px; height: 800px; outline: 2px solid orangered">
+  <!-- <ngx-structure-viewer [source]="source" [loci]="loci"></ngx-structure-viewer> -->
+  <ngx-features-viewer [features]="features" [sequence]="sequence"></ngx-features-viewer>
 </div>
 <!-- <router-outlet></router-outlet> -->
