--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,4 +1,9 @@
+// Define style for generic grid line
 .axis-grid line {
   stroke-opacity: 0.3;
   stroke: gray;
+}
+// Do not show line for sequence
+.axis-grid line:nth-child(2) {
+  stroke-opacity: 0 !important;
 }
