--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,9 +1,20 @@
+@import '~bootstrap-icons/font/bootstrap-icons.css';
+
 // Define style for generic grid line
 .axis-grid line {
   stroke-opacity: 0.3;
   stroke: gray;
 }
 // Do not show line for sequence
+.axis-grid line:nth-child(1),
 .axis-grid line:nth-child(2) {
   stroke-opacity: 0 !important;
+}
+// Hide default y-axis ticks
+.y.axis .tick text {
+  display: none;
+}
+// Style custom y-axis ticks
+.label div {
+  cursor: pointer;
 }
