Implements rotation of caret icon in label when feature is opened/closed. Hides caret icon in sequence label

--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -50,3 +50,12 @@ i.dssp {
     background-size: 100% 48px;
   }
 }
+// Style labels
+.label.sequence i {
+  display: none;
+}
+.label:not(.active) i::before {
+  // Rotate icon with effect
+  transition: transform 0.4s;
+  transform: rotate(-90deg);
+}
