Added zoom, hwoever it is not working properly

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -5,7 +5,7 @@
   <!-- <ngx-structure-viewer [source]="source" [loci]="loci"></ngx-structure-viewer> -->
   <ngx-features-viewer [features]="features" [sequence]="sequence"></ngx-features-viewer>
 </div>
-<!-- TODO Remove this -->
+<!-- TODO Remove this
 <p>{{ sequence | json }}</p>
-<p>{{ features | json }}</p>
+<p>{{ features | json }}</p> -->
 <!-- <router-outlet></router-outlet> -->
