--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,13 +1,17 @@
 @import '~bootstrap-icons/font/bootstrap-icons.css';
+@import '../styles/loci';
+@import '../styles/pins';
+@import '../styles/dssp';
 
 // Define style for generic grid line
 .axis-grid line {
   stroke-opacity: 0.3;
+
   stroke: gray;
 }
 // Do not show line for sequence
 .axis-grid line:nth-child(1) {
-  stroke-opacity: 0 !important;
+  stroke-dasharray: 2;
 }
 // Hide default y-axis ticks
 .y.axis .tick text {
@@ -16,38 +20,6 @@
 // Style custom y-axis ticks
 .label div {
   cursor: pointer;
-}
-// Style custom DSSP icons
-i.dssp {
-  // Set height
-  width: 100%;
-  height: 48px;
-  // Disable repeat
-  background-repeat: no-repeat;
-  // Style helix
-  &.dssp-helix {
-    background: url('../assets/dssp-helix.svg');
-    background-position:center center;
-    background-size: 100% 48px;
-  }
-  // Style strand start
-  &.dssp-strand-start {
-    background: url('../assets/dssp-strand-start.svg');
-    background-position:center center;
-    background-size: 100% 48px;
-  }
-  // Style strand end
-  &.dssp-strand-end {
-    background: url('../assets/dssp-strand-end.svg');
-    background-position:center center;
-    background-size: 100% 48px;
-  }
-  // Style generic strand
-  &.dssp-strand {
-    background: url('../assets/dssp-strand.svg');
-    background-position:center center;
-    background-size: 100% 48px;
-  }
 }
 // Style labels
 .label {
