Updates dependencies; Updates DSSP representation; Fixes bug on loci draw

--- a/projects/ngx-features-viewer/src/styles/_pins.scss
+++ b/projects/ngx-features-viewer/src/styles/_pins.scss
@@ -10,7 +10,7 @@ foreignObject.pin {
         width: 100%;
         // Style content
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
         // Define border
         box-sizing: border-box;
         // border-radius: inherit;
