--- a/projects/ngx-features-viewer/src/styles/_dssp.scss
+++ b/projects/ngx-features-viewer/src/styles/_dssp.scss
@@ -10,20 +10,57 @@ foreignObject.dssp {
         width: 100%;
         // Style content
         justify-content: center;
-        align-items: end;
+        align-items: flex-end;
         // Define border
         box-sizing: border-box;
     }
+    // Common style for DSSP icons
+    i[class^="dssp"] {
+        position: relative;
+        visibility: hidden;
+        display: flex;
+        height: 100%;
+        width: 100%;
+    }
     // Style DSSP helix icon
-    i.dssp.dssp-helix {
-        background: url('../assets/dssp-helix.svg');
-        background-position:center center;
-        background-size: 100% 48px;
+    i.dssp-helix {
+        visibility: visible;
+        background-color: inherit;
+        -webkit-mask-image: url('../assets/dssp-helix.svg');
+        mask-image: url('../assets/dssp-helix.svg');
+        mask-position: 0 center;
+        mask-size: auto 100%;
     }
     // Style DSSP strand icon
-    i.dssp.dssp-strand {
-        background: url('../assets/dssp-strand-end.svg');
-        background-position:center center;
-        background-size: 100% 48px;
+    i.dssp-strand {
+        // Initialize scaffold
+        display: flex;
+        visibility: hidden;
+        // Represent tail
+        &::before {
+            visibility: visible;
+            background-color: inherit;
+            -webkit-mask-image: url('../assets/dssp-strand-tail.svg');
+            mask-image: url('../assets/dssp-strand-tail.svg');
+            mask-position: 0 center;
+            mask-size: auto 100%;
+            flex-shrink: 1;
+            flex-grow: 1;
+            content: '';
+        }
+        // Represent head
+        &::after {
+            visibility: visible;
+            background-color: inherit;
+            -webkit-mask-image: url('../assets/dssp-strand-head.svg');
+            mask-image: url('../assets/dssp-strand-head.svg');
+            mask-position: 0 center;
+            mask-size: auto 100%;
+            flex-shrink: 0;
+            flex-grow: 0;
+            content: '';
+            width: 31px;
+        }
+        
     }
 }
