Fixed bug on DSSP and PINS creation. Updates loci creation function to inglude variable loci type.

--- a/projects/ngx-features-viewer/src/styles/_loci.scss
+++ b/projects/ngx-features-viewer/src/styles/_loci.scss
@@ -1,5 +1,5 @@
 // Style generic locus feature
-foreignObject.locus {
+foreignObject.loci {
     box-sizing: border-box;
     border-radius: .375rem;
     position: relative;
