--- a/projects/ngx-features-viewer/src/styles/_pins.scss
+++ b/projects/ngx-features-viewer/src/styles/_pins.scss
@@ -1,5 +1,5 @@
 // Style generic locus feature
-foreignObject.pin {
+foreignObject.pins {
     // Style foreground (visible)
     div.foreground {
         // Define positioning
