Introduces dinamic height

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Define page title -->
 <h1>{{ title }}</h1>
 <!-- Define container -->
-<div style="width: 100%; height: 800px; outline: 2px solid orangered">
+<div style="width: 100%; height: auto; outline: 2px solid orangered">
   <!-- <ngx-structure-viewer [source]="source" [loci]="loci"></ngx-structure-viewer> -->
   <ngx-features-viewer [features]="features" [sequence]="sequence"></ngx-features-viewer>
 </div>
