Created demo for structure viewer. Introduced color selection

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -1,11 +1,2 @@
-<!-- Define page title -->
-<h1>{{ title }}</h1>
-<!-- Define container -->
-<div style="width: 100%; height: auto; outline: 2px solid orangered">
-  <!-- <ngx-structure-viewer [source]="source" [loci]="loci"></ngx-structure-viewer> -->
-  <ngx-features-viewer [features]="features" [sequence]="sequence"></ngx-features-viewer>
-</div>
-<!-- TODO Remove this
-<p>{{ sequence | json }}</p>
-<p>{{ features | json }}</p> -->
-<!-- <router-outlet></router-outlet> -->
+<!-- TODO Add page scaffold -->
+<router-outlet></router-outlet>
