Updates angular.json to build demo application within the /docs folder. Builds updated project

--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap-icons/font/bootstrap-icons.css';
+// @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import '../styles/labels';
 @import '../styles/loci';
 @import '../styles/pins';
