--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -8,7 +8,7 @@
     </p>
 </div>
 <!-- Section: features -->
-<div>
+<div style="display: none">
     <h2>Features</h2>
     <p>
         Each `Feature` object characterizes either a single or a range of amino-acids.
@@ -38,7 +38,7 @@
 <div>
     <h2>Try it out</h2>
      <!-- Show input -->
-     <code>
+     <code style="display: none">
         const height = {{ height | json }}<br>
         const sequence = <a href="https://www.uniprot.org/uniprotkb/P05067/entry">P05067</a><br>
         const features = <span>[<br>
