--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,5 +1,5 @@
-// @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import '../styles/labels';
+@import '../styles/icons';
 @import '../styles/loci';
 @import '../styles/pins';
 @import '../styles/dssp';
