--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.scss
@@ -1,14 +1,14 @@
-:host {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: lighter;
-    font-kerning: normal;
-    font-size: medium;
-    // color: $dark;
+// :host {
+//     font-family: 'Courier New', Courier, monospace;
+//     font-weight: lighter;
+//     font-kerning: normal;
+//     font-size: medium;
+//     // color: $dark;
 
-    .feature {
-        font-size: x-small !important;
-    }
+//     .feature {
+//         font-size: x-small !important;
+//     }
     
-}
+// }
 
 
