--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -1,51 +1,23 @@
-<!-- Section: introduction -->
-<div>
-    <h1>Structure viewer</h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut elit ac sapien sagittis semper a egestas sem.
-        Nulla sodales, nibh sit amet congue pharetra, mi ipsum placerat erat, vel suscipit mi urna id massa. Praesent
-        venenatis nisl sed leo commodo scelerisque. Cras tempus posuere justo et imperdiet. Nulla facilisis nulla
-        malesuada, ultrices libero vitae, lacinia lorem. Nam gravida tempus ultricies. Integer hendrerit neque mauris,
-        in dapibus sapien egestas et. Nunc ut vehicula nunc. Ut malesuada nulla erat, id ornare turpis faucibus sit
-        amet. Vestibulum congue volutpat ultricies.
-    </p>
-</div>
-<!-- Section: try it out -->
-<div>
-    <div style="margin-bottom: .75rem">
-        <!-- Show title -->
-        <h2>Try it out</h2>
-        <!-- Show input -->
-        <code>
-            const source = {{ source | json }}<br>
-            const loci = {{ loci | json }}<br>
-            const highlight = {{ highlight | json }}<br>
-        </code>
+<div class="container pt-3">
+    <!-- Section: introduction -->
+    <div class="mb-3">
+        <h1>Structure viewer</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut elit ac sapien sagittis semper a egestas
+            sem.
+            Nulla sodales, nibh sit amet congue pharetra, mi ipsum placerat erat, vel suscipit mi urna id massa.
+            Praesent
+            venenatis nisl sed leo commodo scelerisque. Cras tempus posuere justo et imperdiet. Nulla facilisis nulla
+            malesuada, ultrices libero vitae, lacinia lorem. Nam gravida tempus ultricies. Integer hendrerit neque
+            mauris,
+            in dapibus sapien egestas et. Nunc ut vehicula nunc. Ut malesuada nulla erat, id ornare turpis faucibus sit
+            amet. Vestibulum congue volutpat ultricies.
+        </p>
     </div>
-    <!-- TODO Show output -->
-    <div style="display: flex; flex-direction: row;">
-        <!-- Structure viewer -->
-        <div style="display: block; height: 600px; width: 600px;">
-            <ngx-structure-viewer [settings]="settings" [source]="source" [loci]="loci" [highlight]="highlight" [select]="select"></ngx-structure-viewer>
-        </div>
-        <!-- Command palette -->
-        <div style="display: block; margin-left: 1rem;">
-            <!-- Handle highlight -->
-            <div style="display: flex; flex-direction: row; align-items: baseline; margin-bottom: 1rem;">
-                <span style="margin-right: .25rem;">Highlight locus 10-20 on chain A</span>
-                <button type="button" (click)="highlight={ start: '10', end: '20', chain: 'A' }">Highlight!</button>
-            </div>
-            <!-- TODO Handle zoom -->
-            <div style="display: flex; flex-direction: row; align-items: baseline; margin-bottom: 1rem;">
-                <span style="margin-right: .25rem;">Focus locus 30-40 on chain A</span>
-                <button type="button" disabled>Focus!</button>
-            </div>
-            <!-- Handle selection -->
-            <div style="display: flex; flex-direction: row; align-items: baseline; margin-bottom: 1rem;">
-                <span style="margin-right: .25rem;">Select locus 55-65 on chain A</span>
-                <button type="button" (click)="select={ start: '55', end: '65', chain: 'A' }">Select!</button>
-            </div>
-        </div>
-    </div>
-
+    <!-- Section: choose sources -->
+    <!-- <app-section-sources></app-section-sources> -->
+    <!-- Section: color chains -->
+    <!-- <app-section-chains></app-section-chains> -->
+    <!-- Section: show contacts -->
+    <app-section-contacts></app-section-contacts>
 </div>
