--- a/projects/demo-showcase/src/styles.scss
+++ b/projects/demo-showcase/src/styles.scss
@@ -27,7 +27,8 @@
 @import "../../../node_modules/bootstrap/scss/helpers";
 @import "../../../node_modules/bootstrap/scss/navbar";
 @import "../../../node_modules/bootstrap/scss/badge";
-
+@import "../../../node_modules/bootstrap/scss/progress";
+@import "../../../node_modules/bootstrap/scss/nav";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../node_modules/bootstrap/scss/utilities/api";
@@ -36,3 +37,4 @@
 @import "../../../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
 @import "./styles/background";
 @import "./styles/scaffold";
+@import "./styles/utils";
